src/test/resources/failing/fail95.pnd
@Type Fruit
@type(noDefault=true) Apple : Fruit
@constructor byId[x] = a : int, Fruit